- Fixed bug #61978 (Object recursion not detected for classes that implement JsonSerializable)